# sdrterm

./: .gitattributes  .gitignore  README.md  example.sh  example_simo.sh  example_simo_file.sh  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: python-app.yml
extra/: setup.py
extra/src/: iq_correction.pyx
extra/src/fast/: iq_corrector.pyx
matlab/: MyFMBroadcastDemodulator.m  deinterleave.m  fmModulate.m  interleave.m
src/: cariboulite_print.py  rtltcp.py  sdrcontrol.py  sdrcontrol.tcss  sdrterm.py
src/dsp/: data_processor.py  demodulation.py  dsp_processor.py  iq_correction.py  util.py  vfo_processor.py
src/exceptions/: server_interrupt.py  unrecognized_input.py
src/misc/: file_util.py  general_util.py  hooked_thread.py  io_args.py  keyboard_interruptable_thread.py  mappable_enum.py  read_file.py  vfo_list.py
src/plots/: abstract_plot.py  multi_spectrum_analyzer_plot.py  multi_vfo_plot.py  plot_interface.py  ps_plot.py  qt_spectrum_analyzer.py  socket_spectrum_analyzer.py  spectrum_analyzer.py  spectrum_analyzer_plot.py  util.py  waterfall_plot.py  wave_form_plot.py
src/sdr/: control_rtl_tcp.py  controller.py  output_server.py  receiver.py  rtl_tcp_commands.py  socket_receiver.py  util.py
src/server/: output_server.py
test/dsp/: demodulation_test.py  dsp_processor_test.py  iq_correction_test.py
test/misc/: file_util_test.py  general_util_test.py  io_args_test.py  keyboard_interruptable_thread_test.py  read_file_test.py
